--- a/eventex/core/static/css/main.css
+++ b/eventex/core/static/css/main.css
@@ -375,4 +375,16 @@ section header h2 {
     padding-right: 15px;
 }
 
+.talks h3 {
+  min-height: 0;
+  padding: 0;
+}
+
+.talks h4 {
+  min-height: 1em;
+  font-size: 1em;
+  padding: 0;
+  margin: 0;
+}
+
 /* Fim Customização */
